===============
Stalker Changes
===============

0.2.0.b3
--------

* SOM:
  * Update: FilenameTemplate's are not ``strictly typed`` anymore.
  * Update: Removed the FilenameTemplate type initialization, FilenameTemplates
    do not depend on Types anymore.
* WebUI:
  * Update: Updated to Dojo 1.9
  * Update: stalker.js is renamed to dialogs.js and it is now fully compatible
    with Dojo AMD.
  * Update: Merged StatusList create and update dialogs in to one.
  * Update: Content List - Task now checks user permissions to disable part of
    the UI.
  * Update: Added description field to the Summarize Task view.
  * Fix: Fixed fieldUpdater.js to work properly with Dojo 1.9 especially for
    MultiSelect widgets.
  * Fix: Separated the dialog and action routes for Structure.
  * Fix: Fixed unnecessary module imports in stalker.js.
  * Fix: Schedule button is now working properly.
  * Fix: Fixed Image Format creation.
  * Fix: Fixed Filename Template create dialog routine.
  * Fix: Fixed Filename Template update dialog routine.
  * Fix: Fixed entity_types in Filename Template creation UI.
  * Fix: Fixed Group update dialog, the permissions were not displayed and the
    name was not updated on the server side.

0.2.0.b2
--------

* Stalker is now compatible with Python 2.6.
* SOM:
  * Task:
    * Update: Tasks now have a new attribute called ``watchers`` which holds a
      list of User instances watching the particular Task.
    * Update: Users now have a new attribute called ``watching`` which is a
      list of Task instances that this user is watching.
  * TimeLog:
    * Update: TimeLog instances will expand Task.schedule_timing value
      automatically if the total amount of logged time is more than the
      schedule_timing value.
    * Update: TimeLogs are now considered while scheduling the task.
    * Fix: TimeLogs raises OverBookedError when appending the same TimeLog
      instance to the same resource.
  * Auth: